# 2048C-SDL

./: .gitignore  Build And Run.bat  Build.bat  CMakeLists.txt  LICENSE  README.md  Start.bat  main.c
src/: main.c
src/engine/: camera.c  camera.h  components.h  engine.c  engine.h  engineEvents.c  engineEvents.h  graphics.c  graphics.h  inputs.c  inputs.h  medias.c  medias.h  sprite.c
src/engine/components/: sprite.c  sprite.h
src/engine/graphics/: camera.h  drawCalls.c  drawCalls.h  graphics.c  graphics.h
src/game/: game.c  game.h
